# monkeygestures

./: .gitignore  README.md  build.bat
dll/: Cargo.toml  build.rs
dll/.cargo/: config
dll/src/: lib.rs
dll/src/cpp/: shareddata.cpp
exe/: Cargo.toml  monkeygestures.json
exe/.cargo/: config
exe/src/: main.rs
extension/: background.js  manifest.json
