[package]
name = "monkeyhook"
version = "0.1.0"
authors = ["benki"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "winnt", "winuser"] }
chrome_native_messaging = "0.1"
serde_json = "1.0"

[lib]
name = "monkeyhook"
crate-type = ["dylib"]

[build-dependencies]
cc = "1.0"